feat(auth-2): implement end point to register and fetch all users
