# cm.domeni.authentis-users/openapi/main.yaml
@@ -55,6 +55,52 @@ paths:
           description: "Invalid input"
         "401":
           description: "Unauthorized"
+  /register:
+    post:
+      tags:
+      - "User"
+      summary: "register user"
+      description: "register user"
+      operationId: "register"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateUser"
+      responses:
+        "200":
+          description: "successful operation"
+          content:
+            application/json:
+              schema:
+                type: "string"
+                format: "uuid"
+        "400":
+          description: "Bad request"
+        "409":
+          description: "this username already exist"
+  /user:
+    get:
+      tags:
+      - "User"
+      summary: "get user info"
+      description: "get user info including id, username, and all roles"
+      operationId: "fetchAllUsers"
+      security:
+      - bearerAuth: []
+      responses:
+        "200":
+          description: "successful operation"
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/UserDTO"
+        "401":
+          description: "Unauthorized"
+        "404":
+          description: "User not found"
 components:
   schemas:
     DemoDTO:
@@ -65,3 +111,55 @@ components:
           format: "uuid"
         name:
           type: "string"
+    UserDTO:
+      type: "object"
+      properties:
+        id:
+          type: "string"
+          format: "uuid"
+        userName:
+          type: "string"
+        email:
+          type: "string"
+          format: "email"
+        password:
+          type: "string"
+          writeOnly: true
+        firstName:
+          type: "string"
+        lastName:
+          type: "string"
+        birthDate:
+          type: "string"
+          format: "date"
+        address:
+          $ref: "#/components/schemas/AddressDTO"
+    AddressDTO:
+      properties:
+        city:
+          type: "string"
+          description: "city of address"
+    CreateUser:
+      required:
+      - "userName"
+      - "email"
+      - "password"
+      type: "object"
+      properties:
+        userName:
+          type: "string"
+        email:
+          type: "string"
+          format: "email"
+        password:
+          type: "string"
+          writeOnly: true
+        firstName:
+          type: "string"
+        lastName:
+          type: "string"
+        birthDate:
+          type: "string"
+          format: "date"
+        address:
+          $ref: "#/components/schemas/AddressDTO"
