# cm.domeni.authentis-users/src/main/java/cm/domeni/authentis_users/infrastructure/keycloak/KeycloakService.java
@@ -1,0 +1,7 @@
+package cm.domeni.authentis_users.infrastructure.keycloak;
+
+import cm.domeni.authentis_user.dto.CreateUser;
+
+public interface KeycloakService {
+  String createUser(CreateUser createUser);
+}
